Fixed 'More Info' tab from overflow

--- a/static/styles.css
+++ b/static/styles.css
@@ -238,7 +238,7 @@ body {
     flex: 0 0 auto;
     border-radius: 5px 5px 0 0;
     padding: 20px 22.64px;
-    margin-right: 10px;
+    margin-right: 8.5px;
     text-align: left;
 	background: linear-gradient(to bottom, rgba(59, 61, 76, 0.6), #292c3b);
     color: rgba(255, 255, 255, 0.5);
